Add mention to baserock at the end.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <a href="http://cinemetrics.fredericbrodbeck.de/">Cinemetrics</a> inspired
       my focus on movie color palettes.
     </p>
-
+    <br />
     <h3 class="lessmarginbottom">
       <a class="externlink" href="https://www.youtube.com/c/Scinemax">
         Scinema - Videomaking
@@ -99,5 +99,11 @@
       </li>
       <li><a href="https://github.com/jbsiraudin">My GitHub</a></li>
     </ul>
+
+    <br />
+    <p>
+      This website's design comes from
+      <a href="https://blog.koley.in/baserock/">this great article</a>.
+    </p>
   </body>
 </html>
