--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Blog by Jean-Baptiste Siraudin</title>
+    <title>a blog, I guess</title>
+    <link rel="icon" href="favicon.ico" />
     <link
       rel="stylesheet"
       href="style.css"
