--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>a blog, I guess</title>
+    <title>a blog, I guess - jbsiraudin</title>
     <link rel="icon" href="favicon.ico" />
     <link
       rel="stylesheet"
