Fix title in index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <h1>This is a blog I guess.</h1>
+    <h1>This is a blog, I guess.</h1>
     <h3>By <em>Jean-Baptiste Siraudin</em></h3>
 
     <p>
