Add render page link to index

--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
       award at the Frames Video Web Festival 2018 in France.
     </p>
 
+    <h3 class="lessmarginbottom">
+      <a class="internlink" href="/pop/rendering.html">
+        Movie graphics fun facts - reading & writing
+      </a>
+    </h3>
+    <p class="lessmargintop">
+      A compilation of fun facts on 3D movies I found during my paper reading
+      sessions.
+    </p>
+    <p>Still in WIP.</p>
+
     <hr />
     <h2 id="contact">Contact</h2>
     <ul>
