Fix styling for mozilla

--- a/pop/rendering.html
+++ b/pop/rendering.html
@@ -87,8 +87,8 @@
             >Bunny (1998)</a
           >
         </h2>
-        <p><em>Renderer : </em>Blue Sky Path tracer</p>
-        <p><em>Rendering algorithm(s) : </em></p>
+        <p><em>Renderer : </em>Blue Sky's CGI Motion</p>
+        <p><em>Rendering algorithm(s) : </em>Path tracing</p>
         <p>
           <em>Rendering info(s) : </em>First use of a Monte Carlo path tracer.
         </p>
