--- a/pop/rendering.html
+++ b/pop/rendering.html
@@ -35,6 +35,27 @@
         </h2>
         <p><em>Renderer : </em>Pixar's Renderman</p>
         <p><em>Rendering algorithm(s) : </em>REYES</p>
+        <p>
+          <em>Modeling info(s) : </em>During Toy Story many characters started
+          with a clay sculpt. Modelers would then mark out the control vertices
+          on the sculpt and digitize them with a Polhemus, a pen-like input
+          device which the modeler would touch to each point on the surface and
+          click to register each point within the computer. It was a painstaking
+          process that could not be interrupted or you would have to start over
+          again.<br />
+        </p>
+        <p>
+          <em>Animation info(s) : </em>Pixar had limited desktop computer
+          performance, so many of characters had very simple geometry standins.
+          Animators were using simple cylinders and cubes to block in the
+          animation and turned on the high resolution surface called PAT for
+          refining the performance. At that time turning on the final mesh
+          slowed the machine to crawl so animators learned how to work around it
+          by concentrating on the body language first and only switching to the
+          detail mesh for finishing.<br />
+          There is 76 animatable characters.<br />
+          Woody has 596 controls.
+        </p>
         <p><em>Rendering info(s) : </em>Shadow maps</p>
       </div>
     </div>
@@ -257,6 +278,29 @@
     <hr />
     <div class="movie">
       <img
+        src="https://m.media-amazon.com/images/M/MV5BMTcwODc1MTMxM15BMl5BanBnXkFtZTYwMDg1NzY3._V1_UX182_CR0,0,182,268_AL_.jpg"
+      />
+
+      <div class="movietext">
+        <h2>
+          <a class="externlink" href="https://www.imdb.com/title/tt0383574/"
+            >Pirates of the Caribbean: Dead Man's Chest (2006)</a
+          >
+        </h2>
+        <p><em>Renderer : </em>Pixar's Renderman</p>
+        <p><em>Rendering algorithm(s) : </em>PBGI</p>
+        <p>
+          <em>Production info(s) : </em>Body animation is based on motion
+          capture data, facial animation is keyframed based on footage by the
+          actor.
+        </p>
+        <p><em>Rendering info(s) : </em>Subsurface scattering.</p>
+      </div>
+    </div>
+
+    <hr />
+    <div class="movie">
+      <img
         src="https://m.media-amazon.com/images/M/MV5BMTMzODU0NTkxMF5BMl5BanBnXkFtZTcwMjQ4MzMzMw@@._V1_UX182_CR0,0,182,268_AL_.jpg"
       />
 
@@ -341,7 +385,11 @@
           >
         </h2>
         <p><em>Renderer : </em>Pixar's Renderman</p>
-        <p><em>Rendering algorithm(s) : </em>REYES</p>
+        <p><em>Rendering algorithm(s) : </em>REYES + PBGI</p>
+        <p>
+          <em>Animation info(s) : </em>Woody has 2245 controls.<br />There are
+          over 300 animatable characters.
+        </p>
         <p><em>Rendering info(s) : </em></p>
       </div>
     </div>
@@ -368,7 +416,10 @@
           stone walls was designed and built as 3D models in the computer. The
           production team visited, researched and studied a number of castles
           for reference.<br />Merida has more than 1500 individually sculpted,
-          curly red strands that generate about 111,700 total hairs.
+          curly red strands that generate about 111,700 total hairs.<br />
+          The previous animation system called Menv got a major updatecalled
+          Presto and the new format USD (Universal Scene Description) was
+          introduced.
         </p>
         <p><em>Rendering info(s) : </em></p>
       </div>
@@ -410,6 +461,26 @@
         </h2>
         <p><em>Renderer : </em>Pixar's Renderman</p>
         <p><em>Rendering algorithm(s) : </em>RIS</p>
+        <p><em>Rendering info(s) : </em></p>
+      </div>
+    </div>
+
+    <hr />
+    <div class="movie">
+      <img
+        src="https://m.media-amazon.com/images/M/MV5BMjMwNDkxMTgzOF5BMl5BanBnXkFtZTgwNTkwNTQ3NjM@._V1_UX182_CR0,0,182,268_AL_.jpg"
+      />
+
+      <div class="movietext">
+        <h2>
+          <a class="externlink" href="https://www.imdb.com/title/tt4633694/"
+            >Spider-Man: Into the Spider-Verse (2018)</a
+          >
+        </h2>
+        <p>
+          <em>Renderer : </em>Sony's Arnold (branched from Autodesk's Arnold)
+        </p>
+        <p><em>Rendering algorithm(s) : </em></p>
         <p><em>Rendering info(s) : </em></p>
       </div>
     </div>
