--- a/pop/rendering.html
+++ b/pop/rendering.html
@@ -13,12 +13,16 @@
       title="no title"
       charset="utf-8"
     />
+    <script src="https://kit.fontawesome.com/39ba592910.js"></script>
   </head>
   <body>
-    <h1>
-      Modeling, animation, rendering fun facts from popular movies you probably
-      know
-    </h1>
+    <div class="header">
+      <a class="internlink" href="/index.html"><i class="fas fa-home"></i></a>
+      <h2>
+        Modeling, animation, rendering fun facts from popular movies you
+        probably know
+      </h2>
+    </div>
     <h5>By <em>Jean-Baptiste Siraudin</em></h5>
 
     <hr />
@@ -375,6 +379,30 @@
     <hr />
     <div class="movie">
       <img
+        src="https://m.media-amazon.com/images/M/MV5BMjA5NDQyMjc2NF5BMl5BanBnXkFtZTcwMjg5ODcyMw@@._V1_UX182_CR0,0,182,268_AL_.jpg"
+      />
+
+      <div class="movietext">
+        <h2>
+          <a class="externlink" href="https://www.imdb.com/title/tt0892769/"
+            >How to Train Your Dragon (2010)</a
+          >
+        </h2>
+        <p><em>Renderer : </em>Dreamworks's Light</p>
+        <p><em>Rendering algorithm(s) : </em>PBGI</p>
+        <p><em>Animation info(s) : </em></p>
+        <p>
+          <em
+            >Rendering info(s) : the texture for his skin was created from a
+            scan of a coffee-stained styrofoam cup! Citer le Tweet
+          </em>
+        </p>
+      </div>
+    </div>
+
+    <hr />
+    <div class="movie">
+      <img
         src="https://m.media-amazon.com/images/M/MV5BMTgxOTY4Mjc0MF5BMl5BanBnXkFtZTcwNTA4MDQyMw@@._V1_UY268_CR3,0,182,268_AL_.jpg"
       />
 
@@ -385,7 +413,10 @@
           >
         </h2>
         <p><em>Renderer : </em>Pixar's Renderman</p>
-        <p><em>Rendering algorithm(s) : </em>REYES + PBGI</p>
+        <p>
+          <em>Rendering algorithm(s) : </em>Deep framebuffer, micro-polygon
+          rasterization + PBGI
+        </p>
         <p>
           <em>Animation info(s) : </em>Woody has 2245 controls.<br />There are
           over 300 animatable characters.
@@ -450,6 +481,29 @@
     <hr />
     <div class="movie">
       <img
+        src="https://m.media-amazon.com/images/M/MV5BMzMwMTAwODczN15BMl5BanBnXkFtZTgwMDk2NDA4MTE@._V1_UX182_CR0,0,182,268_AL_.jpg"
+      />
+
+      <div class="movietext">
+        <h2>
+          <a class="externlink" href="https://www.imdb.com/title/tt1646971/"
+            >How to Train Your Dragon 2 (2014)</a
+          >
+        </h2>
+        <p><em>Renderer : </em>Dreamworks's Moonlight</p>
+        <p><em>Rendering algorithm(s) : </em></p>
+        <p><em>Production info(s) : </em></p>
+        <p>
+          <em>Modeling info(s) : </em>Astrid uses over 1.67 GB of geometry and
+          1.34 GB of textures.
+        </p>
+        <p><em>Rendering info(s) : </em></p>
+      </div>
+    </div>
+
+    <hr />
+    <div class="movie">
+      <img
         src="https://m.media-amazon.com/images/M/MV5BYjQ5NjM0Y2YtNjZkNC00ZDhkLWJjMWItN2QyNzFkMDE3ZjAxXkEyXkFqcGdeQXVyODIxMzk5NjA@._V1_UY268_CR3,0,182,268_AL_.jpg"
       />
 
@@ -486,6 +540,25 @@
     </div>
 
     <hr />
+    <div class="movie">
+      <img
+        src="https://m.media-amazon.com/images/M/MV5BMjIwMDIwNjAyOF5BMl5BanBnXkFtZTgwNDE1MDc2NTM@._V1_UX182_CR0,0,182,268_AL_.jpg"
+      />
+
+      <div class="movietext">
+        <h2>
+          <a class="externlink" href="https://www.imdb.com/title/tt2386490/"
+            >How to Train Your Dragon: The Hidden World (2019)</a
+          >
+        </h2>
+        <p><em>Renderer : </em>Dreamworks's Moonray</p>
+        <p><em>Rendering algorithm(s) : </em></p>
+        <p><em>Animation info(s) : </em></p>
+        <p><em>Rendering info(s) : </em></p>
+      </div>
+    </div>
+
+    <hr />
     <div class="sources">
       <h5>Sources:</h5>
       <a
@@ -494,7 +567,5 @@
         Press kit "The Science Behind Pixar" by Museum Of Science
       </a>
     </div>
-    <hr />
-    <h2><a class="internlink" href="/index.html">Go back to Index</a></h2>
   </body>
 </html>
