Create portfolio, fix article title

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       I'm interested in.
     </p>
     <p>
-      Everything you need to contact me is at
+      You may also explore
+      <a class="internlink" href="/contact/portfolio.html">my portfolio</a> and
+      everything you need to contact me is at
       <a class="internlink" href="#contact">the bottom of this page</a>.
     </p>
     <hr />
