Fill portfolio, various fixes

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <h3>By <em>Jean-Baptiste Siraudin</em></h3>
 
     <p>
-      I'm 24 and a student in computer science and graphics at Ecole
-      polytechnique and Telecom ParisTech. I'm also kinda """<em>famous</em>"""
-      on YouTube for a science popularization channel called <em>Scinema</em>.
+      I'm 25 and a graduate student in computer science and graphics at Ecole
+      polytechnique and Télécom Paris. I'm also kinda """<em>famous</em>""" on
+      YouTube for a science popularization channel called <em>Scinema</em>.
     </p>
     <p>
       This is a blog, an online resume,
@@ -32,9 +32,16 @@
     </p>
     <p>
       You may also explore
-      <a class="internlink" href="/contact/portfolio.html">my portfolio</a> and
-      everything you need to contact me is at
-      <a class="internlink" href="#contact">the bottom of this page</a>.
+      <a
+        style="font-weight:bold"
+        class="internlink"
+        href="/contact/portfolio.html"
+        >my portfolio</a
+      >
+      and everything you need to contact me is at
+      <a style="font-weight:bold" class="internlink" href="#contact"
+        >the bottom of this page</a
+      >.
     </p>
     <hr />
     <h2>Articles</h2>
@@ -67,10 +74,13 @@
     <p>
       I developed the offline program to get the color palette of every frame of
       a movie, with OpenCV. Then I made this website to have an interactive viz
-      of my results, with MeteorJS, ReactJS and PixiJS. Believe it or not, but
-      the design inspiration for the website comes from me looking at maths
-      papers online, all made with that LaTeX's plainness. I wanted to apply the
-      same philosophy to movie analysis. Other cool projects like the
+      of my results, with MeteorJS, ReactJS and PixiJS.
+    </p>
+    <p>
+      Believe it or not, but the design inspiration for the website comes from
+      me looking at maths papers online, all made with that LaTeX's plainness. I
+      wanted to apply the same philosophy to movie analysis. Other cool projects
+      like the
       <a class="externlink" href="https://thecolorsofmotion.com/"
         >Colors of Motion</a
       >
@@ -91,6 +101,8 @@
       I make videos about science by using the world of cinema as a hook. How
       strong the wind has to be in order to make Mary Poppins fly? Is 4K really
       useful for movies? How to simulate water in VFX? That kind of stuff.
+    </p>
+    <p>
       Scinema has over 120 000 subscribers and won the "Science popularization"
       award at the Frames Video Web Festival 2018 in France.
     </p>
