Fix link to TSOM

--- a/contact/portfolio.html
+++ b/contact/portfolio.html
@@ -42,7 +42,7 @@
     <p class="legend">The "shape" of <em>Matrix</em></p>
     <br />
     <p>
-      <a class="externlink" href="www.theshapeofmovies.com"
+      <a class="externlink" href="http://www.theshapeofmovies.com"
         >The Shape of Movies</a
       >
       is a website for a better visualization of the colors of a film. I handled
