Add contact info at the end of portfolio

--- a/contact/portfolio.html
+++ b/contact/portfolio.html
@@ -171,5 +171,27 @@
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
+    <br />
+    <hr />
+    <div class="contact">
+      <h2 style="text-align: center;" id="contact">Contact</h2>
+      <ul>
+        <a class="internlink" href="/contact/JeanBaptisteSiraudinResume.pdf"
+          ><li st style="font-weight: bold">CV</li></a
+        >
+        <a
+          class="externlink"
+          href="https://www.linkedin.com/in/jean-baptiste-siraudin/"
+          ><li><i style="color: #0e76a8" class="fab fa-linkedin"></i></li
+        ></a>
+        <a class="externlink" href="https://twitter.com/scinema_x"
+          ><li><i style="color: #38A1F3" class="fab fa-twitter"></i></li
+        ></a>
+        <a class="externlink" href="https://github.com/jbsiraudin"
+          ><li><i style="color: #6e5494" class="fab fa-github"></i></li
+        ></a>
+      </ul>
+    </div>
+    <br />
   </body>
 </html>
