Small fixes on contact footer

--- a/contact/portfolio.html
+++ b/contact/portfolio.html
@@ -46,9 +46,9 @@
         >The Shape of Movies</a
       >
       is a website for a better visualization of the colors of a film. I handled
-      the development of script to get the color data and the website to display
-      it in a fun way. The design of the website is inspired by the plainness of
-      scientific papers.
+      the development of script to get the color data (with OpenCV) and the
+      website to display it in a fun way (MeteorJS+ReactJS+PixiJS). The design
+      of the website is inspired by the plainness of scientific papers.
     </p>
     <img class="illustration" src="/contact/tsom2.png" style="width: 50%;" />
     <p class="legend">Demo look for a search request on the website</p>
@@ -189,6 +189,11 @@
         ></a>
         <a class="externlink" href="https://github.com/jbsiraudin"
           ><li><i style="color: #6e5494" class="fab fa-github"></i></li
+        ></a>
+        <a
+          class="externlink"
+          href="mailto:jean-baptiste.siraudin@polytechnique.org"
+          ><li><i style="color: #cc5c3b" class="fas fa-at"></i></li
         ></a>
       </ul>
     </div>
