--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
         <a class="externlink" href="https://github.com/jbsiraudin"
           ><li><i style="color: #6e5494" class="fab fa-github"></i></li
         ></a>
+        <a
+          class="externlink"
+          href="mailto:jean-baptiste.siraudin@polytechnique.org"
+          ><li><i style="color: #cc5c3b" class="fas fa-at"></i></li
+        ></a>
       </ul>
     </div>
     <br />
