Final tweaks to portfolio

--- a/contact/portfolio.html
+++ b/contact/portfolio.html
@@ -56,8 +56,8 @@
     <h4>mesh animation through KelvinLets</h4>
     <p>
       An experiment with adapting the KelvinLets' brushes (grab, twist and
-      scale) to an animation system. Initially thought to be a solution for
-      designing a vortex animation for a 3D animated short.
+      scale) to an animation system by putting them on a path. Initially thought
+      to be a solution for designing a vortex animation for a 3D animated short.
     </p>
 
     <div class="gallery">
